test: добавлены тесты для новых вариантов использования